--- a/src/index.hbs
+++ b/src/index.hbs
@@ -1,2 +1,24 @@
-<h1>Some article title</h1>
-{{>contributor/contributor}}
+<div class='article__container'>
+    <h1 class='headline'>Would Covid passports be damaging to public health?</h1>
+    {{>tabHeader}}
+    {{>contributor
+        argument='for'
+        image-src='https://i.guim.co.uk/img/media/9d6928ae5baa2c668137dcc7f45fa31b50c55493/0_0_480_480/master/480.png?width=140&quality=45&auto=format&fit=max&dpr=2&s=7d607c07b4c28cc21eeb1c6ada051b1d'
+        name='Melinda Mills'
+        opinionSummary='Covid passports could be workable, but they’ll need to meet certain criteria'
+        bio='Prof Melinda Mills is director of the Leverhulme Centre for Demographic Science at the University of Oxford, a member of Royal Society SET-C committee and participant of the Sage behavioural subcommittee. She writes here in a personal capacity'
+        opinion='Many have argued that Covid passports – certificates showing whether someone has had the vaccine or a negative test, or has Covid immunity – wouldn’t work. In our recent Royal Society report, we concluded that they could be feasible in some cases, but only if they meet certain criteria. The crux is how and where these passports would be used.
+
+    For international travel, where testing infrastructure and a “yellow card” system are already in place, Covid passports seem a reasonable move. The UK government is also trialling Covid passports at large gatherings such as sports events. Earlier this month, when the Texas Rangers played in front of a sold-out baseball stadium, we got a glimpse of what can happen when the floodgates open without restrictions: there was no social distancing in place and few people wore masks – all in a context of rising infections and when only a fraction of the population had received their second jabs.'
+    }}
+    {{>contributor
+        argument='against'
+        image-src='https://i.guim.co.uk/img/media/33ed04f2c21ee7fa98d9fc9f6c1cc218f35dc052/0_0_480_480/master/480.png?width=140&quality=45&auto=format&fit=max&dpr=2&s=8b17ed19bdbeabf7414d3b4e1ac0be54'
+        name='Stephen Reicher'
+        opinionSummary='Making people prove they’re vaccinated will harm everyone’s health'
+        bio='Stephen Reicher is a member of the Sage subcommittee advising on behavioural science and a leading authority on crowd psychology'
+        opinion='The government has flown so many kites about “Covid passports” and “vaccine passports” that we have ended up with a hopelessly confused debate where people are disagreeing over entirely different things. Certificates that allow people entry to potentially crowded spaces could take one of two forms: a “Covid passport” would show the results of a recent Covid test, whereas a “vaccine passport” would show whether people had been vaccinated.
+
+    So let’s focus on vaccine passports. First, a crucial distinction: there is a world of difference between requiring a vaccine to undertake activities that are seen as nonessential and applying this requirement to activities that are basic to our everyday lives. In the former case, vaccination is perceived as a choice, whereas in the latter it becomes effectively compulsory.'
+    }}
+</div>
