--- a/src/components/tabHeader/tabHeader.hbs
+++ b/src/components/tabHeader/tabHeader.hbs
@@ -1,4 +1,4 @@
-<div class='tabHeader'>
-    <button class='tabHeader__button tabHeader__button--for'>For</button>
-    <button class='tabHeader__button tabHeader__button--against'>Against</button>
+<div class='tabHeader tabHeader--{{position}} no-js' style='display: none;'>
+    <button class='tabHeader__button tabHeader__button--for tabHeader__button--{{position}}'><span>For</span><span class="off-screen"></span></button>
+    <button class='tabHeader__button tabHeader__button--against tabHeader__button--{{position}}'><span>Against</span><span class="off-screen"></span></button>
 </div>
