--- a/src/components/contributor/contributor.scss
+++ b/src/components/contributor/contributor.scss
@@ -1,7 +1,9 @@
 .contributor {
     border: 0.1rem solid $border-color;
     border-top: none;
+    border-bottom: none;
     padding: 0.5rem;
+    padding-top: 1rem;
 
     @media (min-width: $mobile-breakpoint) {
         padding: 2rem;
@@ -42,6 +44,8 @@
         h3 {
             font-size: 0.8rem;
             font-weight: 300;
+            border-left: $highlight solid 0.2rem;
+            padding-left: 0.3rem;
         }
     }
 
