Updated fonts and removed tab buttons on desktop

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@ body {
     color: $text-colour;
     max-width: 880px;
     margin: auto;
-    font-family: 'guardianFont', Fallback, sans-serif;
+    font-family: 'guardianFont', Arial, Helvetica, sans-serif;
 }
 
 .article__container {
