--- a/src/components/contributor/contributor.scss
+++ b/src/components/contributor/contributor.scss
@@ -7,6 +7,7 @@
 
     @media (min-width: $mobile-breakpoint) {
         padding: 2rem;
+        border-bottom: 0.1rem solid $border-color;
     }
 
     &.hide {
@@ -32,17 +33,13 @@
             margin-left: 2rem;
         }
         h2 {
-            font-size: 1.2rem;
-        }
-
-        h3 {
-            font-size: 1rem;
+            font-size: 1.5rem;
         }
     }
 
     &__bio {
         h3 {
-            font-size: 0.8rem;
+            font-size: 0.825rem;
             font-weight: 300;
             border-left: $highlight solid 0.2rem;
             padding-left: 0.3rem;
@@ -51,7 +48,7 @@
 
     &__opinion {
         p {
-            font-size: 0.825rem;
+            font-size: 1rem;
         }
     }
 }
