--- a/src/components/tabHeader/tabHeader.scss
+++ b/src/components/tabHeader/tabHeader.scss
@@ -3,6 +3,11 @@
 .tabHeader {
     display: flex;
 
+    span {
+        font-size: 1rem;
+        font-family: "guardianFont", Arial, Helvetica, sans-serif;
+    }
+
     &__button {
         width: 50%;
         border: 0.1rem solid $border-color;
@@ -31,6 +36,10 @@
             &.clicked {
                 border-top: none;
             }
+        }
+
+        @media (min-width: $mobile-breakpoint) {
+            display: none;
         }
     }
 }
